--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=MichinTheCat
 spring.datasource.password=MichinTheCat
 aws.accessKeyId=AKIA4G3ALB4CLOS37F4P
 aws.secretKey=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
+aws.emailSender=jhon.bravo@ias.com.co
 aws.region=us-east-1
 
 spring.jpa.hibernate.ddl-auto=create-drop
