--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ aws.accessKeyId=AKIA4G3ALB4CLOS37F4P
 aws.secretKey=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
 aws.emailSender=jhon.bravo@ias.com.co
 aws.region=us-east-1
+server.port=5000
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 
