--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>psyco-back</finalName>
     </build>
 
 </project>
