--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.unibague</groupId>
     <artifactId>BackendSpringPsico</artifactId>
-    <version>0.3</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>back-psyco</name>
     <description>back-psyco</description>
     <properties>
@@ -85,7 +85,6 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>psyco-back0.2</finalName>
     </build>
 
 </project>
