Variable AWS Paths

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#=jdbc:postgresql://rdslist4100.czq1dhhdewlx.us-east-1.rds.amazonaws.com:5432/CarManager
+spring.datasource.url=jdbc:postgresql://rdslist4100.czq1dhhdewlx.us-east-1.rds.amazonaws.com:5432/CarManager
 spring.datasource.username=MichinTheCat
 spring.datasource.password=MichinTheCat
 aws.accessKeyId=AKIA4G3ALB4CLOS37F4P
@@ -6,7 +6,6 @@ aws.secretKey=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
 aws.emailSender=jhon.bravo@ias.com.co
 aws.region=us-east-1
 server.port=5000
-
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
