Variable AWS Paths

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://4100.czq1dhhdewlx.us-east-1.rds.amazonaws.com:5432/CarManager
+spring.datasource.url=jdbc:postgresql://rdslist4100.czq1dhhdewlx.us-east-1.rds.amazonaws.com:5432/CarManager
 spring.datasource.username=MichinTheCat
 spring.datasource.password=MichinTheCat
 aws.accessKeyId=AKIA4G3ALB4CLOS37F4P
